--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -2,12 +2,15 @@ plugins {
     id "com.android.application"
     // START: FlutterFire Configuration
     id 'com.google.gms.google-services'
+    id 'com.google.firebase.firebase-perf'
     // END: FlutterFire Configuration
     id "kotlin-android"
     // The Flutter Gradle Plugin must be applied after the Android and Kotlin Gradle plugins.
     id "dev.flutter.flutter-gradle-plugin"
 }
 dependencies {
+    // Import the BoM for the Firebase platform
+
     // Import the Firebase BoM
     implementation platform('com.google.firebase:firebase-bom:33.1.1')
 
